--- a/SS9/SS9_B4/SS9_B4.css
+++ b/SS9/SS9_B4/SS9_B4.css
@@ -1,41 +1,36 @@
-*{
-    margin: 0;
+* {
     padding: 0;
+    margin: 0;
     box-sizing: border-box;
 }
-body{
-    padding: 30px
-}
-header{
-    background-color: #16a34a;
+html {
+    font-family: Arial, Helvetica, sans-serif;
     color: white;
-    padding: 10px 30px;
-    text-align: center;
 }
-main{
-    padding-bottom: 20px;
-    padding-top: 20px;
-    background-color: #f3f4f6;
-    min-height: calc(100vh - 120px);
+header {
+    background-color: #3498DB;
+    padding: 0 20px;
+    margin-bottom: 10px;
+    line-height: 50px;
+}
+main {
     display: flex;
+    gap: 10px;
+    height: calc(100vh - 120px);
 }
-.sidebar{
-    color: white;
-    width: 250px;
-    margin-right: 20px;
+.side-bar {
+    background-color: #2ECC71;
+    flex-grow: 1;
     padding: 20px;
-    background-color: rgb(31, 6, 6);
-    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
 }
-.content{
-    width: 100vw;
-    background-color: rgb(253, 14, 14);
+.content {
+    background-color: #E74C3C;
+    flex-grow: 3;
     padding: 20px;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
 }
-footer{
-    background-color: #16a34a;
-    color: white;
-    text-align: center;
-    padding: 10px 20px;
+footer {
+    background-color: #9B59B6;
+    line-height: 50px;
+    margin-top: 10px;
+    padding: 0 20px;
 }
